--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon -w src src/index.ts",
-    "start:prod": "tsc && node dist/index.js",
-    "start": "tsc && node dist/index.js"
+    "start:prod": "tsc && node build/index.js",
+    "test": "jest"
   },
   "author": "EVG777-prog",
   "license": "ISC",
@@ -27,7 +27,9 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "@types/jest": "^28.1.2",
+    "@types/supertest": "^2.0.12",
+    "ts-jest": "^28.0.5",
     "uuid": "^8.3.2"
-  },
-  "type": "module"
+  }
 }
